Add custom view

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ComposePlayground" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.ComposePlayground" parent="Theme.Material3.DayNight.NoActionBar" >
+        <item name="colorPrimary">#9c404c</item>
+        <item name="colorOnPrimary">#ffffff</item>
+        <item name="colorSurface">#ffdadb</item>
+    </style>
 </resources>
