--- a/preview/src/main/res/layout/view_order.xml
+++ b/preview/src/main/res/layout/view_order.xml
@@ -13,12 +13,13 @@
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/background_label"
         android:backgroundTint="#e8c08e"
         android:drawablePadding="8dp"
         android:paddingHorizontal="8dp"
-        android:text="@string/monitor"
+        android:text="@string/draft"
         android:textColor="@android:color/white"
         app:drawableTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
