WIP: Compose SearchView

--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="primary">#9c404c</color>
     <color name="onPrimary">#ffffff</color>
     <color name="surface">#F6EEE0</color>
+    <color name="onSurface">#666666</color>
+
 
     <!-- statuses -->
     <color name="draft">#D5CABD</color>
